TypeScript/budgetty/k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budgetty-backend
spec:
  selector:
    app: budgetty-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
      name: http
  type: ClusterIP
